--- a/components/button/template.njk
+++ b/components/button/template.njk
@@ -1,4 +1,15 @@
-<a href="#">
-	A button.
+{#
+
+Sizes: Small, Default, Large (Hero)
+
+Variation: Primary, secondary, terterary, text
+
+#}
+
+
+<a
+	href="#"
+	class="atom atom--button button--primary bg-blue-700 hover:bg-blue-900 text-white text-xl px-6 py-3 rounded inline-block"
+>
 	{{ params.text }}
 </a>
