--- a/components/blockquote/template.njk
+++ b/components/blockquote/template.njk
@@ -1,12 +1,12 @@
 <figure
 	class="molecule molecule--blockquote"
 >
-	<blockquote>
+	<blockquote class="text-3xl mb-3">
 		{{ params.quote | safe }}
 	</blockquote>
 	{% if params.cite %}
 	<figcaption>
-		{{ params.cite }}
+		&mdash; {{ params.cite }}
 	</figcaption>
 	{% endif %}
 </figure>
