--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
-.button--primary {
-	@apply bg-blue-50 text-white rounded inline-block;
-}
-
-.button--lg {
-	@apply px-6 py-3;
-}
+@import "../../components/button/button.css";
