--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -11,7 +11,9 @@
 </head>
 <body>
 
-	{{ content | safe }}
+	<div class="container mx-auto my-10">
+		{{ content | safe }}
+	</div>
 
 </body>
 </html>
