--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,4 +2,5 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+@import "../../components/heading/heading.css";
 @import "../../components/button/button.css";
