--- a/components/heading/template.njk
+++ b/components/heading/template.njk
@@ -1,10 +1,81 @@
-{#
+{# Set font-family #}
 
-Sizes: display 1-8
-Can be extended to include body 1-3, eyebrow and caption styles
+{{ setFont }}
+	{% if params.font === undefined or params.font === '' %}
+		{% set font = 'font-avantgarde' %}
+	{% else %}
+		{% set font = '' %}
+	{% endif %}
+{{ setFont }}
 
-#}
+{# Set button level (ex: 1-6), Defaults to h1 if empty #}
 
-<h1>
-	A heading
-</h1>
+{{ setLevel }}
+	{% if params.evel === 1 %}
+		{% set level = 1 %}
+	{% elif params.level === 2 %}
+		{% set level = 2 %}
+	{% elif params.level === 3 %}
+		{% set level = 3 %}
+	{% elif params.level === 4 %}
+		{% set level = 4 %}
+	{% elif params.level === 5 %}
+		{% set level = 5 %}
+	{% elif params.level === 6 %}
+		{% set level = 6 %}
+	{% else %}
+		{% set level = 1 %}
+	{% endif %}
+{{ setLevel }}
+
+{# Set font size #}
+
+{{ setSize }}
+	{% if params.size === 'xs' %}
+		{% set size = "text-xs" %}
+	{% elif params.size === 'sm' %}
+		{% set size = "text-sm" %}
+	{% elif params.size === 'base' %}
+		{% set size = "text-base" %}
+	{% elif params.size === 'lg' %}
+		{% set size = "text-lg" %}
+	{% elif params.size === 'xl' %}
+		{% set size = "text-xl" %}
+	{% elif params.size === '2xl' %}
+		{% set size = "text-2xl" %}
+	{% elif params.size === '3xl' %}
+		{% set size = "text-3xl" %}
+	{% elif heading_size === '4xl' %}
+		{% set heading_size = "text-4xl" %}
+	{% elif heading_size === '5xl' %}
+		{% set heading_size = "text-5xl" %}
+	{% elif heading_size === '6xl' %}
+		{% set heading_size = "display-4" %}
+	{% elif heading_size === '7xl' %}
+		{% set heading_size = "display-3" %}
+	{% elif params.size === '8xl' %}
+		{% set size = "display-2" %}
+	{% elif params.size === '9xl' %}
+		{% set size = "display-1" %}
+	{% else %}
+		{% set heading_size = '' %}
+	{% endif %}
+{{ setSize }}
+
+{# Heading template #}
+
+<h{{ level }}
+	class="atom atom--heading {{ size }} {{ params.classes }} {{ font }}"
+	id="{{ id }}"
+>
+	{% if params.url %}
+		<a
+			href="{{ params.url }}"
+			class="block"
+		>
+			{{ params.text | safe }}
+		</a>
+	{% else %}
+		{{ params.text | safe }}
+	{% endif %}
+</h{{ level }}>
