--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,5 +2,15 @@
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
 
+/* Core styles */
+
+@import "../../core/fonts.css";
+
+/* Component styles */
+
 @import "../../components/heading/heading.css";
 @import "../../components/button/button.css";
+
+html, body {
+	@apply antialiased;
+}
