--- a/src/site/_includes/layouts/base.njk
+++ b/src/site/_includes/layouts/base.njk
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-	<div class="container mx-auto my-10">
+	<div class="container mx-auto my-10 px-6 md:px-0">
 		{{ content | safe }}
 	</div>
 
