Updates to blockquote

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,7 @@
 
 @import "../../components/heading/heading.css";
 @import "../../components/button/button.css";
+@import "../../components/blockquote/blockquote.css";
 
 html, body {
 	@apply antialiased;
