Updates to faqs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,7 @@
 @import "../../components/heading/heading.css";
 @import "../../components/button/button.css";
 @import "../../components/blockquote/blockquote.css";
+@import "../../components/faq/faq.css";
 
 html, body {
 	@apply antialiased;
