--- a/components/blockquote/template.njk
+++ b/components/blockquote/template.njk
@@ -1,5 +1,5 @@
 <figure
-	class="molecule molecule--blockquote pt-14"
+	class="molecule molecule--blockquote dkb-blockquote pt-14"
 >
 	<blockquote
 		class="blockquote__text text-4xl mb-6 font-avantgarde leading-tight relative"
