--- a/components/button/template.njk
+++ b/components/button/template.njk
@@ -49,7 +49,7 @@ Variation: Primary, secondary, terterary, text
 
 <a
 	href="{{ params.href }}"
-	class="button {{ variation }} {{ size }} {{ params.classes }} {{ display }}"
+	class="button dkb-button {{ variation }} {{ size }} {{ params.classes }} {{ display }}"
 	{% if params.target %}target="{{ params.target }}"{% endif %}
 >
 	<span class="button__text">
