--- a/components/card/template.njk
+++ b/components/card/template.njk
@@ -26,7 +26,7 @@ feature: true (bg-color)
 {{ cardSets }}
 
 <div
-	class="component component--card {{ card_classes }}"
+	class="component component--card dkb-card {{ card_classes }}"
 >
 	<a
 		href="{{ card_url }}"
