--- a/components/embed/template.njk
+++ b/components/embed/template.njk
@@ -1,4 +1,6 @@
-<figure>
+<figure
+	class="module module--embed dkb-embed"
+>
 	<div style="padding-bottom: 62.5%;" class="relative rounded overflow-hidden h-0">
 		<iframe
 			width="560"
