--- a/components/figure/template.njk
+++ b/components/figure/template.njk
@@ -16,7 +16,7 @@
 {# Figure template #}
 
 <figure
-	class="component component--figure {{ params.classes }}"
+	class="component component--figure dkb-figure {{ params.classes }}"
 >
 	<img
 		srcset="{{ params.srcset }}"
