--- a/components/heading/template.njk
+++ b/components/heading/template.njk
@@ -65,7 +65,7 @@
 {# Heading template #}
 
 <h{{ level }}
-	class="atom atom--heading {{ size }} {{ params.classes }} {{ font }}"
+	class="atom atom--heading dkb-heading {{ size }} {{ params.classes }} {{ font }}"
 	{% if params.id %} id="{{ params.id }}" {% endif %}
 >
 	{% if params.href %}
