--- a/components/card/template.njk
+++ b/components/card/template.njk
@@ -1,24 +1,14 @@
-{#
+{% from "../headline/macro.njk" import dkbHeadline with context %}
+{% from "../figure/macro.njk" import dkbFigure with context %}
 
+{#
 variation:
 - horizontal
 - vertical
-feature: true (bg-color)
-
-	card_set,
-	card_classes,
-	card_url,
-	image,
-	content
-
 #}
 
-{% from "../headline/macro.njk" import headline with context %}
-{% from "../figure/macro.njk" import figure with context %}
-
-
 {{ cardSets }}
-	{% if card_set === 1 %}
+	{% if params.set === 1 %}
 		{% set heading_size = '2xl' %}
 	{% else %}
 		{% set heading_size = content.heading_size %}
@@ -26,27 +16,28 @@ feature: true (bg-color)
 {{ cardSets }}
 
 <div
-	class="component component--card dkb-card {{ card_classes }}"
+	class="component component--card dkb-card {{ params.card_classes }}"
 >
 	<a
-		href="{{ card_url }}"
+		href="{{ params.href }}"
 		class="flex flex-wrap block"
 		tabindex="-1"
 	>
-		{{ figure(
+		{{ dkbFigure(
 				figure_classes=image.figure_classes+" card__image",
-				image_src=image.image_src,
-				image_params=image.image_params,
-				image_alt=image.image_alt,
-				image_figcaption=image.image_figcaption,
-				image_srcset=image.image_srcset,
-				image_sizes=image.image_sizes,
+				src=image.src,
+				params=image.image_params,
+				alt=image.image_alt,
+				figcaption=image.image_figcaption,
+				srcset=image.image_srcset,
+				sizes=image.image_sizes,
 				image_classes=image.image_classes,
-				image_width=image.image_width,
-				image_height=image.image_height
+				width=image.image_width,
+				height=image.image_height
 			)
 		}}
 	</a>
+	{#
 	{{ headline(
 			eyebrow_text=content.eyebrow_text,
 			eyebrow_classes=content.eyebrow_classes,
@@ -61,4 +52,5 @@ feature: true (bg-color)
 			ctas=content.ctas
 		)
 	}}
+	#}
 </div>
